--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <jackson.version>2.9.5</jackson.version>
         <lombok.version>1.16.20</lombok.version>
         <uportal-spring.version>5.1.0-M6</uportal-spring.version>
+        <uportal-soffit.version>5.1.1</uportal-soffit.version>
 
         <!-- Testing -->
         <junit.version>4.12</junit.version>
@@ -301,6 +302,11 @@
                     <artifactId>oauth</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jasig.portal</groupId>
+            <artifactId>uPortal-soffit-renderer</artifactId>
+            <version>${uportal-soffit.version}</version>
         </dependency>
 
         <!-- Testing -->
